--- a/data/frontend/wifi.html
+++ b/data/frontend/wifi.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Set WiFi Credentials</title>
-    <link rel="stylesheet" href="frontend/bootstrap.min.css">
+    <link rel="stylesheet" href="frontend/css/bootstrap.min.css">
 </head>
 
 <body>
