--- a/data/frontend/filemanager.html
+++ b/data/frontend/filemanager.html
@@ -33,31 +33,8 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-                <div class="row">
-                    <nav class="navbar navbar-expand-lg bg-light">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#">Cerasmarter</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarText">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/wifi">Wifi</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page"
-                                            href="/filemanager">Filemanager</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
+                <div class="row" id="navigation-container">
+                    <!-- Navigation Placeholder -->                    
                 </div>
                 <div class="row mt-5">
                     <h3>File Manager</h3>
@@ -93,7 +70,7 @@
                             <label for="file1" class="form-label">Upload File</label>
                             <input class="form-control" type="file" id="file1" name="file1" onchange="uploadFile()">
                         </div>
-                        <div class="progress" id="progress" hidden>
+                        <div class="progress progress-bar-striped progress-bar-animated" id="progress" hidden>
                             <div class="progress-bar" role="progressbar" id="progressBar" aria-label="Upload Progress"
                                 style="display: none !important;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>                                        
@@ -109,9 +86,11 @@
             </div>
         </div>
     </div>
+    <script src="frontend/js/framework.js"></script>
     <script src="frontend/js/filemanager.js"></script>
     <script src="frontend/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript">
+        loadNavigation();
         showUsagePercentage();
         listFiles();
     </script>
