--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -15,47 +15,119 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-                <div class="row">
-                    <nav class="navbar navbar-expand-lg bg-light">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#">Cerasmarter</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarText">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/wifi">Wifi</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/filemanager">Filemanager</a>
-                                    </li>
-                                </ul>
+                <div class="row" id="navigation-container">
+                    <!-- Navigation Placeholder -->                    
+                </div>
+                <div class="row mt-5">
+                    <h3>System Status</h3>
+                </div>
+                <div class="row mt-5">
+                    <ul class="list-group" id="status-list">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Model
+                            <span class="badge bg-primary rounded-pill" id="model"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Revision
+                            <span class="badge bg-primary rounded-pill" id="revision"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Cores
+                            <span class="badge bg-primary rounded-pill" id="cores"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            RAM
+                            <div class="progress" style="width: 100px;">
+                                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-heap"></div>
                             </div>
-                        </div>
-                    </nav>
-                </div>
-                <div class="row mt-5">
-                    <h3></h3>
-                </div>
-
-                <div class="row mt-5">
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <button class="btn btn-danger" onclick="rebootButton()">Reboot</button>
-                    </div>
+                            <span class="badge bg-primary rounded-pill" id="heap"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Flash
+                            <div class="progress" style="width: 100px;">
+                                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-sketch"></div>
+                            </div>
+                            <span class="badge bg-primary rounded-pill" id="sketch"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            CAN-Bus Status
+                            <span class="badge bg-primary rounded-pill" id="can"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            CAN-Bus Errors
+                            <span class="badge bg-primary rounded-pill" id="canerrorcount"></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            MQTT Status
+                            <span class="badge bg-primary rounded-pill" id="mqtt"></span>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="col-md-3">
             </div>
         </div>
     </div>
-    <script src="frontend/js/filemanager.js"></script>
+    <script src="frontend/js/api.js"></script>
+    <script src="frontend/js/framework.js"></script>
     <script src="frontend/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript">
+        loadNavigation();
+        showStatus();
+        // Refresh Status every 5 seconds
+        window.setInterval(showStatus, 5000);
+
+            async function showStatus() {
+                /*
+                    {
+                        "cores": 2,
+                        "model": "ESP32-D0WDQ6",
+                        "revision": 1,
+                        "frequency": 240,
+                        "freeheap": 197884,
+                        "heap": 312732,
+                        "freesketch": 1536000,
+                        "sketchsize": 976032,
+                        "canstatus": true,
+                        "canerrorcount": 0,
+                        "mqtt": true
+                    }
+                */
+                var status = await getSystemStatus();
+                _("model").innerHTML = status["model"];
+                _("revision").innerHTML = status["revision"];
+                var occupiedHeap = status["heap"] - status["freeheap"];
+                var occupiedHeapPercent = (occupiedHeap / status["heap"]) * 100.0;
+                var freeHeapPercent = (status["freeheap"] / status["heap"]) * 100.0;
+                _("heap").innerHTML = `${humanReadableSize(occupiedHeap)} out of ${humanReadableSize(status["heap"])} used`;
+                _("prog-heap").style = "width: " + occupiedHeapPercent.toFixed(2) + "%;";
+                _("prog-heap").setAttribute('aria-valuenow', occupiedHeapPercent);
+                _("prog-heap").innerHTML = `${Math.round(occupiedHeapPercent)}%`;
+                _("cores").innerHTML = status["cores"];
+                var occupiedSketchPercent = (status["sketchsize"] / status["freesketch"]) * 100.0;
+                _("prog-sketch").style = "width: " + occupiedSketchPercent.toFixed(2) + "%;";
+                _("prog-sketch").setAttribute('aria-valuenow', occupiedSketchPercent);
+                _("prog-sketch").innerHTML = `${Math.round(occupiedSketchPercent)}%`;
+                _("sketch").innerHTML = `${humanReadableSize(status["sketchsize"])} out of ${humanReadableSize(status["freesketch"])} used`;
+                _("can").innerHTML = status["canstatus"] ? "Working" : "Error";
+                if(status["canstatus"]) {
+                    _("can").classList.remove("bg-danger");
+                    _("can").classList.add("bg-success");
+                } else {
+                    _("can").classList.remove("bg-success");
+                    _("can").classList.add("bg-danger");
+                }
+                _("canerrorcount").innerHTML = status["canerrorcount"];
+                _("mqtt").innerHTML = status["mqtt"] ? "Connected" : "Disconnected";
+                if(status["mqtt"]) {
+                    _("mqtt").classList.remove("bg-danger");
+                    _("mqtt").classList.add("bg-success");
+                } else {
+                    _("mqtt").classList.remove("bg-success");
+                    _("mqtt").classList.add("bg-danger");
+                }
+            }
+    </script>
 </body>
 
 </html>
