--- a/data/frontend/wifi.html
+++ b/data/frontend/wifi.html
@@ -15,73 +15,107 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-            <div class="row">
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Cerasmarter</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                <div class="row" id="navigation-container">
+                    <!-- Navigation Placeholder -->
+                </div>
+                <div class="row mt-5">
+                    <h3>Set Wifi Credentials</h3>
+                </div>
+                <div class="row">
+                    <form onsubmit="sendWifiConfig(event)" id="wifi-form">
+                        <div class="text-start">
+                            <div class="mb-3 row">
+                                <label class="col-sm-2 col-form-label" for="wifi_ssid">SSID</label>
+                                <div class="col-sm-10">
+                                    <input id="wifi_ssid" name="wifi_ssid"
+                                        placeholder="The 'SSID' or name of your WiFi network to connect to" type="text"
+                                        required="required" class="form-control" autocomplete="wifi-ssid" required>
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="wifi_pw" class="col-sm-2 col-form-label">Password</label>
+                                <div class="col-sm-10">
+                                    <input id="wifi_pw" name="wifi_pw" type="password" class="form-control"
+                                        autocomplete="wifi-password">
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="hostname" class="col-sm-2 col-form-label">Hostname</label>
+                                <div class="col-sm-10">
+                                    <input id="hostname" name="hostname"
+                                        placeholder="Leave empty to use default &quot;Cerasmarter&quot;" type="text"
+                                        aria-describedby="hostnameHelpBlock" class="form-control" value="Cerasmarter">
+                                    <span id="hostnameHelpBlock" class="form-text text-muted">This will be used to
+                                        display the name of this
+                                        device on your network. It will also influence how the internal WiFi network
+                                        will be called.</span>
+                                </div>
+                            </div>
+                            <div class="mb-3 row justify-content-end">
+                                <div class="col-sm-10">
+                                    <button name="submit" type="submit" class="btn btn-primary">Save</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div id="status"></div>
+                <div class="row align-content-center">
+                    <h3>Found Networks</h3>
+                    <div class="d-flex justify-content-center">
+                        
+                        <button class="btn btn-primary" onclick="listNetworks()" id="refresh-networks">
+                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" id="networks-loading" hidden></span>
+                            <span id="refresh-btn-label">Scan Networks</span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarText">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active"  aria-current="page" href="/wifi">Wifi</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"
-                                        href="/filemanager">Filemanager</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-                </nav>
-            </div>
-            <div class="row">
-                <h3>Set Wifi Credentials</h3>
-            </div>
-            <div class="row">
-                <form action="/wifi" method="POST">
-                    <div class="text-start">
-                        <div class="mb-3 row">
-                            <label class="col-sm-2 col-form-label" for="wifi_ssid">SSID</label>
-                            <div class="col-sm-10">
-                                <input id="wifi_ssid" name="wifi_ssid" placeholder="The 'SSID' or name of your WiFi network to connect to"
-                                    type="text" required="required" class="form-control">
-                            </div>
-                        </div>
-                        <div class="mb-3 row">
-                            <label for="wifi_pw" class="col-sm-2 col-form-label">Password</label>
-                            <div class="col-sm-10">
-                                <input id="wifi_pw" name="wifi_pw" type="text" required="required" class="form-control">
-                            </div>
-                        </div>
-                        <div class="mb-3 row">
-                            <label for="hostname" class="col-sm-2 col-form-label">Hostname</label>
-                            <div class="col-sm-10">
-                                <input id="hostname" name="hostname" placeholder="Leave empty to use default &quot;Cerasmarter&quot;"
-                                    type="text" aria-describedby="hostnameHelpBlock" class="form-control" value="Cerasmarter">
-                                <span id="hostnameHelpBlock" class="form-text text-muted">This will be used to display the name of this
-                                    device on your network. It will also influence how the internal WiFi network will be called.</span>
-                            </div>
-                        </div>
-                        <div class="mb-3 row justify-content-end">
-                            <div class="col-sm-10">
-                                <button name="submit" type="submit" class="btn btn-primary">Save</button>
-                            </div>
-                        </div>
+                    <div id="found-networks">
                     </div>
-                </form>
-            </div>
+                </div>
             </div>
             <div class="col-md-3">
             </div>
         </div>
     </div>
+    <script src="frontend/js/api.js"></script>
+    <script src="frontend/js/framework.js"></script>
+    <script src="frontend/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript">
+        loadNavigation();
+    </script>
+    <script type="text/javascript">        
+        loadWifiConfig();     
+
+        async function loadWifiConfig()
+        {
+            var form = document.forms["wifi-form"];
+            form.disabled = true;
+            var config = await getWifiConfig();
+            for(var entry in config) {
+                form.elements[entry].value = config[entry];
+            }
+            form.disabled = false;
+        }
+
+        async function listNetworks() {
+            _("networks-loading").hidden = false;
+            _("refresh-btn-label").innerHTML = "Scanning...";
+            _("refresh-networks").disabled = true;
+            var networks = await getWifiNetworks();
+            _("networks-loading").hidden = true;
+            _("refresh-btn-label").innerHTML = "Scan Networks";
+            _("refresh-networks").disabled = false;
+            console.log(networks);
+            var networkList = `<table class="table text-start"><thead><tr><th>SSID</th><th>Quality</th><th>Enc</th></thead><tbody>`;
+
+            networks.forEach(network => {
+                networkList += `<tr><td>${network.SSID}</td><td>${Math.min(Math.max(2 * (network.RSSI + 100), 0), 100)}%</td><td>${EncryptionTypes[network.Encryption]}</td></tr>`;
+            });
+
+            networkList += `</tbody></table>`
+            _("found-networks").innerHTML = networkList;
+        }
+    </script>
 </body>
 
 </html>
