Add general config page

--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -24,8 +24,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" href="/wifi" id="wifi-link">Wifi</a></li>
                       <li><a class="dropdown-item" href="/mqtt" id="mqtt-link">MQTT</a></li>
-                      <li><a class="dropdown-item" href="#">Features</a></li>
-                      <li><a class="dropdown-item" href="#">General Settings</a></li>
+                      <li><a class="dropdown-item" href="/general" id="general-link">General Settings</a></li>
                       <li><a class="dropdown-item" href="#">CAN-Bus</a></li>
                       <li><a class="dropdown-item" href="#">Temperature Sensors</a></li>
                       <li><a class="dropdown-item" href="#">LEDs</a></li>
