--- a/data/frontend/reboot.html
+++ b/data/frontend/reboot.html
@@ -14,7 +14,8 @@
         Rebooting, returning to main page in <span class="badge text-bg-primary" id="countdown">30</span> seconds
     </div>
     <script type="text/javascript">
-        var seconds = 20;
+        let seconds = 20;
+
         function countdown() {
             seconds = seconds - 1;
             if (seconds < 0) {
