--- a/data/frontend/filemanager.html
+++ b/data/frontend/filemanager.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger" id="btn-confirm-delete" onclick="null">Delete</button>
+                    <button type="button" class="btn btn-danger" id="btn-confirm-delete" onclick="">Delete</button>
                 </div>
             </div>
         </div>
