--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -38,14 +38,14 @@
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             RAM
                             <div class="progress" style="width: 100px;">
-                                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-heap"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-heap"></div>
                             </div>
                             <span class="badge bg-primary rounded-pill" id="heap"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Flash
                             <div class="progress" style="width: 100px;">
-                                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-sketch"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="prog-sketch"></div>
                             </div>
                             <span class="badge bg-primary rounded-pill" id="sketch"></span>
                         </li>
@@ -93,18 +93,18 @@
                         "mqtt": true
                     }
                 */
-                var status = await getSystemStatus();
+                const status = await getSystemStatus();
                 _("model").innerHTML = status["model"];
                 _("revision").innerHTML = status["revision"];
-                var occupiedHeap = status["heap"] - status["freeheap"];
-                var occupiedHeapPercent = (occupiedHeap / status["heap"]) * 100.0;
-                var freeHeapPercent = (status["freeheap"] / status["heap"]) * 100.0;
+                const occupiedHeap = status["heap"] - status["freeheap"];
+                const occupiedHeapPercent = (occupiedHeap / status["heap"]) * 100.0;
+                const freeHeapPercent = (status["freeheap"] / status["heap"]) * 100.0;
                 _("heap").innerHTML = `${humanReadableSize(occupiedHeap)} out of ${humanReadableSize(status["heap"])} used`;
                 _("prog-heap").style = "width: " + occupiedHeapPercent.toFixed(2) + "%;";
                 _("prog-heap").setAttribute('aria-valuenow', occupiedHeapPercent);
                 _("prog-heap").innerHTML = `${Math.round(occupiedHeapPercent)}%`;
                 _("cores").innerHTML = status["cores"];
-                var occupiedSketchPercent = (status["sketchsize"] / status["freesketch"]) * 100.0;
+                const occupiedSketchPercent = (status["sketchsize"] / status["freesketch"]) * 100.0;
                 _("prog-sketch").style = "width: " + occupiedSketchPercent.toFixed(2) + "%;";
                 _("prog-sketch").setAttribute('aria-valuenow', occupiedSketchPercent);
                 _("prog-sketch").innerHTML = `${Math.round(occupiedSketchPercent)}%`;
