Add CAN-Address config

--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Cerasmarter</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
-            aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -18,18 +17,19 @@
                     <a class="nav-link" href="/update-firmware" id="update-firmware-link">Firmware Update</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Configuration
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Configuration
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="/wifi" id="wifi-link">Wifi</a></li>
-                      <li><a class="dropdown-item" href="/mqtt" id="mqtt-link">MQTT</a></li>
-                      <li><a class="dropdown-item" href="/general" id="general-link">General Settings</a></li>
-                      <li><a class="dropdown-item" href="#">CAN-Bus</a></li>
-                      <li><a class="dropdown-item" href="#">Temperature Sensors</a></li>
-                      <li><a class="dropdown-item" href="#">LEDs</a></li>
+                        <li><a class="dropdown-item" href="/wifi" id="wifi-link">Wifi</a></li>
+                        <li><a class="dropdown-item" href="/mqtt" id="mqtt-link">MQTT</a></li>
+                        <li><a class="dropdown-item" href="/general" id="general-link">General Settings</a></li>
+                        <li><a class="dropdown-item" href="/canbus" id="canbus-link">CAN-Bus</a></li>
+                        <li><a class="dropdown-item" href="/aux" id="aux-link">Temperature Sensors</a></li>
+                        <li><a class="dropdown-item" href="/leds" id="leds-link">LEDs</a></li>
                     </ul>
-                  </li>
+                </li>
             </ul>
         </div>
     </div>
