--- a/data/frontend/wifi.html
+++ b/data/frontend/wifi.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="row">
                     <form onsubmit="sendWifiConfig(event)" id="wifi-form">
+                        <fieldset id="form-fieldset">
                         <div class="text-start">
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label" for="wifi_ssid">SSID</label>
@@ -57,6 +58,7 @@
                                 </div>
                             </div>
                         </div>
+                    </fieldset>
                     </form>
                 </div>
                 <div id="status"></div>
