Add temperature sensor config

--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -26,7 +26,7 @@
                         <li><a class="dropdown-item" href="/mqtt" id="mqtt-link">MQTT</a></li>
                         <li><a class="dropdown-item" href="/general" id="general-link">General Settings</a></li>
                         <li><a class="dropdown-item" href="/canbus" id="canbus-link">CAN-Bus</a></li>
-                        <li><a class="dropdown-item" href="/aux" id="aux-link">Temperature Sensors</a></li>
+                        <li><a class="dropdown-item" href="/auxsensors" id="auxsensors-link">Temperature Sensors</a></li>
                         <li><a class="dropdown-item" href="/leds" id="leds-link">LEDs</a></li>
                     </ul>
                 </li>
