--- a/data/frontend/auxsensors.html
+++ b/data/frontend/auxsensors.html
@@ -26,7 +26,8 @@
                     <div class="alert alert-info alert-dismissible fade show" role="alert">
                         <strong>Info</strong><br/>
                         Enter a name (label) for the sensor and enter its address into the fields. The format of the address is <strong>0x##</strong> which is the same format used by the library to report addresses.<br/>
-                        Example: <code>0x32</code> or <code>0x1F</code>
+                        Example: <code>0x32</code> or <code>0x1F</code><br/>
+                        Refer to the <a href="https://github.com/milesburton/Arduino-Temperature-Control-Library/blob/master/examples/oneWireSearch/oneWireSearch.ino">Library Example</a> on how to scan for addresses.
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                     <h4>Add Sensor</h4>
