Make navbar fixed and use whole width

--- a/data/frontend/filemanager.html
+++ b/data/frontend/filemanager.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div id="navigation-container">
+        <!-- Navigation Placeholder -->
+    </div>
     <!-- Modal -->
     <div class="modal fade" id="confirm-delete-modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -33,9 +36,6 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-                <div class="row" id="navigation-container">
-                    <!-- Navigation Placeholder -->                    
-                </div>
                 <div class="row mt-5">
                     <h3>File Manager</h3>
                 </div>
