--- a/data/frontend/canbus.html
+++ b/data/frontend/canbus.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
+    <div id="navigation-container">
+        <!-- Navigation Placeholder -->
+    </div>
     <div class="container text-center">
         <div class="row">
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-                <div class="row" id="navigation-container">
-                    <!-- Navigation Placeholder -->
-                </div>
                 <!-- Content -->
                 <div class="row mt-5">
                     <h3>CAN-Bus Configuration</h3>
