--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -1,6 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark justify-content-center">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cerasmarter</a>
+
+        <a class="navbar-brand" href="/">
+            <!-- Icon created by Freepik -->
+            <img src="/frontend/img/smart-heating.png" alt="Cerasmarter" width="30" height="24">
+            Cerasmarter        
+        </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +32,8 @@
                         <li><a class="dropdown-item" href="/mqtt" id="mqtt-link">MQTT</a></li>
                         <li><a class="dropdown-item" href="/general" id="general-link">General Settings</a></li>
                         <li><a class="dropdown-item" href="/canbus" id="canbus-link">CAN-Bus</a></li>
-                        <li><a class="dropdown-item" href="/auxsensors" id="auxsensors-link">Temperature Sensors</a></li>
+                        <li><a class="dropdown-item" href="/auxsensors" id="auxsensors-link">Temperature Sensors</a>
+                        </li>
                         <li><a class="dropdown-item" href="/leds" id="leds-link">LEDs</a></li>
                     </ul>
                 </li>
@@ -34,3 +41,4 @@
         </div>
     </div>
 </nav>
+<div class="mb-5"></div>
