Add Can Analyzer to menu

--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -37,6 +37,15 @@
                         <li><a class="dropdown-item" href="/leds" id="leds-link">LEDs</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarUtilDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                        Utilities
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarUtilDropdownMenuLink">
+                        <li><a class="dropdown-item" href="/cananalyzer" id="cananalyzer-link">CAN Message Analyzer</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
