--- a/data/frontend/filemanager.html
+++ b/data/frontend/filemanager.html
@@ -78,6 +78,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="d-grid gap-2 col-6 mx-auto">
+                        <div id="statusdetails"></div>
                         <button class="btn btn-danger" onclick="rebootButton()">Reboot</button>
                     </div>
                 </div>
