Add reboot to home screen

--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -63,8 +63,11 @@
                         </li>
                     </ul>
                 </div>
-                <div id="messages">
-
+                <div class="row mt-5">
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <div id="statusdetails"></div>
+                        <button class="btn btn-danger" onclick="rebootButton()">Reboot</button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3">
