--- a/data/frontend/mqtt.html
+++ b/data/frontend/mqtt.html
@@ -26,13 +26,13 @@
                     <h4>Server Configuration</h4>
                 </div>
                 <div class="row">
-                    <form onsubmit="sendMqttConfig(event)" id="mqtt-form">
+                    <form id="mqtt-form">
                         <div class="text-start">
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label" for="mqtt-server">Server</label>
                                 <div class="col-sm-10">
                                     <input id="mqtt-server" name="mqtt-server"
-                                        placeholder="The IP address of your MQTT broker" type="text" required
+                                        placeholder="The IP address of your MQTT broker" type="text"
                                         class="form-control" autocomplete="mqtt-server" required>
                                 </div>
                             </div>
@@ -76,7 +76,7 @@
                     <h4>Topics Configuration</h4>
                 </div>
                 <div class="row">
-                    <form onsubmit="sendMqttTopicsConfig(event)" id="mqtt-topics-form">
+                    <form id="mqtt-topics-form">
                         <div class="text-start">
                             <div class="mb-3 row">
                                 <label for="status" class="col-sm-2 col-form-label">Status</label>
@@ -193,6 +193,9 @@
         loadNavigation();
         loadMqttConfig();
         loadMqttTopicsConfig();
+
+        _("mqtt-form").addEventListener("onsubmit", sendMqttConfig);
+        _("mqtt-topics-form").addEventListener("onsubmit", sendMqttTopicsConfig);
 
         async function loadMqttConfig() {
             const form = document.forms["mqtt-form"];
