--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -116,8 +116,9 @@
                 _("prog-sketch").setAttribute('aria-valuenow', occupiedSketchPercent);
                 _("prog-sketch").innerHTML = `${Math.round(occupiedSketchPercent)}%`;
                 _("sketch").innerHTML = `${humanReadableSize(status["sketchsize"])} out of ${humanReadableSize(status["freesketch"])} used`;
-                _("can").innerHTML = status["canstatus"] ? "Working" : "Error";
-                if(status["canstatus"]) {
+                let canStatus = status["canstatus"];
+                _("can").innerHTML = CanErrorCodes[canStatus];
+                if(canStatus === 0) {
                     _("can").classList.remove("bg-danger");
                     _("can").classList.add("bg-success");
                 } else {
