--- a/data/frontend/index.html
+++ b/data/frontend/index.html
@@ -50,7 +50,7 @@
                             <span class="badge bg-primary rounded-pill" id="sketch"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            CAN-Bus Status
+                            CAN-Bus Module
                             <span class="badge bg-primary rounded-pill" id="can"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
